--- a/angular.json
+++ b/angular.json
@@ -50,6 +50,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -114,6 +115,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -145,6 +147,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "git-engine"
 }
